[package]
name = "stone_raft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
bytes = "1.2.1"
tokio = {version = "1.21.1", features = ["full"]}
tokio-util = {version = "0.7.4", features =["full"]}
tokio-stream = "0.1.10"